feat: Add linux scripts
Add linux scripts to set environment variables, build and flash.
Change filename in include files to be compatible with linux file system.

Signed-off-by: Alexandre Duchesne <alexandre.duchesne@rtone.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ stm32f7508_freertos-configuration/dropins/workbenchExtension_launchScriptFramewo
 
 # Ignore STM32CubeIDE generated files
 stm32f7508_freertos-bsp/projects/microej/cdt_workspace/.metadata/
+
+*.out
+*.hex
